made changes to randomforest

--- a/RandomForest_model.ipynb
+++ b/RandomForest_model.ipynb
@@ -179,8 +179,12 @@
     "# # concatoning the data\n",
     "df = pd.concat([fake_df, true_df], ignore_index=True)\n",
     "\n",
+    "\n",
+    "# combining the title and text columns to make it easier for TF-IDF vectorizer\n",
+    "df['combined_title_and_text'] = df['title'] + \" \" + df['text']\n",
+    "\n",
     "# picking the combined column to use as the feature matrix\n",
-    "X = df['text']\n",
+    "X = df['combined_title_and_text']\n",
     "y = df['label']\n",
     "\n",
     "# doing a 75% train split\n",
