--- a/RandomForest_model.ipynb
+++ b/RandomForest_model.ipynb
@@ -328,7 +328,7 @@
     "fig, axes = plt.subplots(figsize=(5, 5))\n",
     "\n",
     "# Create a heatmap\n",
-    "sns.heatmap(cm, xticklabels=['Fake News', 'Real News'],  yticklabels=['Fake News', 'Real News'],  annot=True, fmt='d', cmap='Blues', ax=axes)\n",
+    "sns.heatmap(cm, xticklabels=['Real News', 'Fake News'],  yticklabels=['Real News', 'Fake News'],  annot=True, fmt='d', cmap='Blues', ax=axes)\n",
     "axes.set_title('Classification Matrix')\n",
     "axes.set_xlabel('Predicted')\n",
     "axes.set_ylabel('Actual')\n",
@@ -348,9 +348,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
